--- a/src/ui/form-fields/field.css
+++ b/src/ui/form-fields/field.css
@@ -55,15 +55,15 @@
 .combobox__input {
   width: 100%;
   box-sizing: border-box;
-  padding-inline-end: var(--dt-spacing-g, 2rem);
+  padding-inline-end: 3rem;
 }
 
 .combobox__toggle {
   position: absolute;
-  inset-inline-end: var(--dt-spacing-c, 0.75rem);
+  inset-inline-end: 0;
   display: inline-flex;
-  width: 1rem;
-  height: 1rem;
+  width: 3rem;
+  height: 100%;
   padding: 0;
   border: 0;
   background: transparent;
